# AEAI

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/scripts/: start_mlx_server.sh  start_vllm_server.sh
migrations/: env.py
src/application/ports/: cache_store.py  conversation_repository.py  llm_gateway.py  tool_registry.py
src/application/usecases/: create_chat_completion.py  execute_tool_loop.py  stream_chat_completion.py
src/bootstrap/: app.py
src/domain/entities/: conversation.py  message.py  tool_call.py  tool_definition.py
src/domain/errors/: domain_errors.py
src/domain/policies/: model_policy.py
src/domain/value_objects/: inference_request.py  inference_response.py  role.py  runtime_type.py
src/infrastructure/config/: database.py  redis.py  settings.py
src/infrastructure/llm/common/: message_converter.py  stream_normalizer.py
src/infrastructure/llm/mlx/: mlx_adapter.py
src/infrastructure/llm/vllm/: vllm_adapter.py
src/infrastructure/persistence/postgres/: conversation_repository.py  models.py
src/infrastructure/persistence/redis/: cache_store.py
src/infrastructure/tools/: in_memory_tool_registry.py
src/presentation/http/dependencies/: db.py  usecases.py
src/presentation/http/routers/: chat.py  health.py
src/presentation/http/schemas/: chat.py
tests/unit/domain/: test_conversation.py  test_tool_definition.py
